# dgmeteo

./: README.md  pyproject.toml
dgmeteo/command/: common.py  metar.py  remark.py  taf.py
dgmeteo/commons/: i18n.py
dgmeteo/locale/de/LC_MESSAGES/: messages.po
dgmeteo/locale/en/LC_MESSAGES/: messages.po
dgmeteo/locale/es/LC_MESSAGES/: messages.po
dgmeteo/locale/fr/LC_MESSAGES/: messages.po
dgmeteo/locale/it/LC_MESSAGES/: messages.po
dgmeteo/locale/pl/LC_MESSAGES/: messages.po
dgmeteo/locale/ru-RU/LC_MESSAGES/: messages.po
dgmeteo/locale/tr/LC_MESSAGES/: messages.po
dgmeteo/locale/zh-CN/LC_MESSAGES/: messages.po
dgmeteo/model/: enum.py  model.py
dgmeteo/parser/: parser.py
dgmeteo/tests/command/: test_common.py  test_metar.py  test_remark.py  test_taf.py
dgmeteo/tests/common/: test_converter.py
dgmeteo/tests/parser/: test_parser.py
metar_taf_parser/command/: metar.py
metar_taf_parser/model/: model.py
metar_taf_parser/parser/: parser.py
metar_taf_parser/tests/command/: test_common.py
metar_taf_parser/tests/parser/: test_parser.py
