[build-system]
requires = [
    "setuptools >= 77.0.3",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "dgmeteo"
version = "1.9.1"
description = "Python project parsing metar and taf message"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jean-Kevin KPADEY", email = "jeankevin.kpadey@gmail.com" }
]

keywords = ["metar", "taf", "parser", "icao", "airport"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/Malanris/dgmeteo"
"Bug Tracker" = "https://github.com/Malanris/dgmeteo/issues"

[project.optional-dependencies]
tests = ["parameterized", "coverage"]

[tool.setuptools.packages.find]
exclude = ["metar_taf_parser.tests.common", "metar_taf_parser.tests.command", "metar_taf_parser.tests.parser", "metar_taf_parser.tests"]

[tool.setuptools.package-data]
"*" = ["locale/*/*/*.po", "locale/*/*/*.mo", "locale/*.pot"]


[[tool.poetry.source]]
name = "aims-pl-pypi"
url = "https://repository.s7corp.ru/repository/aims-pl-pypi/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "epaas-pypi"
url = "https://repository.s7corp.ru/repository/epaas-pypi-proxy/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "hosted"
url = "https://repository.s7corp.ru/repository/aims-pl-pypi/"
priority = "primary"

